# wkvm

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.keel/: .gitignore  ledger.jsonl
docs/: 10X_E2E_PLAN.md  ANGLE.md  COMPARISON.md  NATIVE_ENGINE_PLAN.md  OPEN_WEBUI_DEMO.md  RECURRENT_MODE.md  RECURRENT_MODE_QUALITY.md  VRAM_SPEED_PLAN_4090.md  WHY_RWKV_WINS.md  gemma_native_contract.md
experiments/: bench_prompt_utils.py  benchmark_contract.py  benchmark_identity.py  gemma_bench_report.py  gemma_demo_video.py  gemma_multiturn_bench.py  gemma_multiturn_http_bench.py  gemma_recurrent_poc.py  gemma_routed_span_video.py  gemma_wkvm_style_video.py  hf_gemma_bench.py  incumbent_gemma_bench.py  long_generation_compare.py  m1_decode_bench.py  m2_engine_bench.py  m3_demos.py  multiturn_10x_report.py  multiturn_http_10x_report.py  native_gemma_bench.py  native_gemma_engine_smoke.py  native_gemma_graph_check.py  native_gemma_layer_parity.py  native_gemma_metrics_smoke.py  native_gemma_prefix_parity.py  native_gemma_quality.py  native_gemma_server_smoke.py  native_gemma_smoke.py  open_webui_demo_render.py  open_webui_demo_scenario.py  open_webui_live_demo.mjs  open_webui_multiturn_bench.py  phase3_gemma_report.py  quality_eval.py  reliable_gemma_report.py  sglang_gemma_server.py  sglang_shared_history_logits.py  t2_trace.py  token_pool_graph_reuse_smoke.py  vllm_shared_history_logits.py  wkvm_demo_video.py  (+1 more)
scripts/: a800_incumbent_profile_validation.py  fetch_open_webui_demo_source.sh  open_webui_demo.sh  run_a800_incumbent_profile_sweep.sh  run_m3.py  run_m3.sh  run_wkvm_10x_e2e_4090.sh  run_wkvm_10x_http_4090.sh  run_wkvm_10x_http_a800.sh  run_wkvm_phase3_4090.sh  run_wkvm_vram_speed_4090.sh
tests/: test_10x_e2e_4090_runner.py  test_10x_http_4090_runner.py  test_10x_http_a800_runner.py  test_a800_incumbent_profile_sweep.py  test_arena.py  test_engine_gpu.py  test_gemma_bench_report.py  test_gemma_engine.py  test_gemma_multiturn_bench.py  test_gemma_multiturn_http_bench.py  test_gemma_native_forward.py  test_gemma_prefill_batch.py  test_gemma_routed_cache.py  test_gemma_server.py  test_gemma_token_pool.py  test_incumbent_gemma_bench.py  test_mixed_batch.py  test_mixed_runner.py  test_multiturn_10x_report.py  test_multiturn_http_10x_report.py  test_native_gemma_quality.py  test_open_webui_demo_render.py  test_open_webui_demo_runner.py  test_open_webui_demo_scenario.py  test_open_webui_multiturn_bench.py  test_packaging.py  test_phase3_gemma_report.py  test_phase3_runner.py  test_reliable_gemma_report.py  test_rwkv7_gpu.py  test_scheduler.py  test_store_gpu.py  test_vram_speed_runner.py  test_wkvm_serving_bench.py
wkvm/: __init__.py  engine.py  gemma_engine.py  gemma_server.py  server.py  store.py
(+186 files in other folders)
