[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wkvm"
version = "0.0.1"
description = "A hypervisor for model state: state-native inference engine for RWKV/GDN/Mamba hybrids with durable, forkable, mutable state handles"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "xiaol" }]
keywords = ["rwkv", "inference", "llm", "linear-attention", "serving"]

[project.optional-dependencies]
# M0 core is dependency-free on purpose: the scheduler and arena are pure
# bookkeeping and must stay unit-testable without a GPU or torch.
gpu = ["torch>=2.6"]
gemma-server = [
    "torch>=2.6",
    "transformers>=5.7,<6",
    "safetensors>=0.4.3",
    "accelerate>=1.1",
]
open-webui-bench = [
    "transformers>=5.7,<6",
    "python-socketio[client]>=5.16,<6",
    "websocket-client>=1.9,<2",
]

[project.scripts]
wkvm-gemma-server = "wkvm.gemma_server:main"

[tool.setuptools.packages.find]
include = ["wkvm*"]
